package thi.Observer.ca4;

public interface TopicListen {
    void listen(TinTuc t);
}
