@startuml
'https://plantuml.com/class-diagram

class Topic{
    List<TinTuc> t;
    + void dangKy(TopicListen listen)
     + void huydangKy(TopicListen listen)
     + void themMoi(TinTuc t)
     + void capNhat((TinTuc t)
}
interface TopicListen{
    void listenr((TinTuc t)
}
class ThanhVienA
class ThanhVienB{
    List<TinTuc> list
}
TopicListen<|--ThanhVienA
TopicListen<|--ThanhVienB
Topic o-->TopicListen:listens
ThanhVienA-->Topic:topic
ThanhVienB-->Topic:topic
@enduml